--- a/style.css
+++ b/style.css
@@ -78,16 +78,12 @@ body {
 .img-frame2 img {
     object-fit: scale-down;
     object-position: center;
-    width: 1475px;
-    /* width: 100%; */
-    /* width: 1000px; */
+    /* width: 1475px; */
+    width: 100%;
     /* height: 734px; */
     /* height: 292px; */
     /* height: 100%; */
     /* margin: -250px 0px 0px 0px; */
-
-    /* margin-left: auto;
-    margin-right: auto; */
     /* border: 5px solid black; */
 }
 
