--- a/style.css
+++ b/style.css
@@ -48,6 +48,19 @@ html {
     background-color: #777;
 }
 
+.moreLess {
+    border: none;
+    color: blue;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+
+    padding: 0;
+    border: none;
+    background: none;
+  }
+
 /* Style the tab content (and add height:100% for full page content) */
 .tabcontent {
     color: black;
@@ -184,6 +197,7 @@ html {
 .snowflake-divider img{
     width: 50px;
     height: 50px;
+    /* display: none; */
 }
 
 
@@ -195,6 +209,7 @@ html {
     flex-wrap: wrap;
     justify-content: left; */
     margin: 30px 10px 0px 10px;
+    padding-bottom: 30px;
 }
 
 .research-section h3{
@@ -215,3 +230,13 @@ html {
     margin-left: 0;
     margin-right: 0;
 }
+
+#more {display: none;}
+#more2 {display: none;}
+#more3 {display: none;}
+#more4 {display: none;}
+#more5 {display: none;}
+
+/* .research-section p more {
+    display: none;
+} */
